// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facility should render a default facility avatar 1`] = `
<div
  class="avatar five"
>
  <span
    alt="London"
    aria-hidden="false"
    aria-label="London"
    class="icon facility"
    role="img"
  />
</div>
`;

exports[`Facility should render a facility avatar with aria hidden 1`] = `
<div
  class="avatar five"
>
  <span
    alt="London"
    aria-hidden="true"
    aria-label="London"
    class="icon facility"
    role="img"
  />
</div>
`;

exports[`Facility should render a facility avatar with color variant seven 1`] = `
<div
  class="avatar seven"
>
  <span
    alt="London"
    aria-hidden="false"
    aria-label="London"
    class="icon facility"
    role="img"
  />
</div>
`;

exports[`Facility should render a facility avatar with custom props 1`] = `
<div
  class="avatar five"
  id="custom props facility"
>
  <span
    alt="London"
    aria-hidden="false"
    aria-label="London"
    class="icon facility"
    role="img"
  />
</div>
`;

exports[`Facility should render fallback facility avatar when invalid image is passed in 1`] = `
<div
  class="avatar five"
>
  <div>
    <div
      class="hidden"
    >
      <img
        alt="London"
        class="image default image"
        src="https://path/to/invalid_image.jpg"
      />
    </div>
    <div>
      <span
        alt="London"
        aria-hidden="false"
        aria-label="London"
        class="icon facility"
        role="img"
      />
    </div>
  </div>
</div>
`;

exports[`Facility should render image facility avatar when image is passed in 1`] = `
<div
  class="avatar five"
>
  <div>
    <div
      class="hidden"
    >
      <img
        alt="London"
        class="image default image"
        src="test-file-stub"
      />
    </div>
    <div>
      <span
        alt="London"
        aria-hidden="false"
        aria-label="London"
        class="icon facility"
        role="img"
      />
    </div>
  </div>
</div>
`;

exports[`Facility should render with a facility avatar with provided height and width 1`] = `
<div
  class="avatar five"
  style="width:5em;height:5em"
>
  <span
    alt="London"
    aria-hidden="false"
    aria-label="London"
    class="icon facility"
    role="img"
  />
</div>
`;
